WIP  - Rewrote alert-box as the close button stopped working with the stretch fixes  - Lightened the placeholder colour for input-box

--- a/run/resources/css/re-com.css
+++ b/run/resources/css/re-com.css
@@ -487,6 +487,16 @@
   background:rgba(0,0,0,0.45);
   }
 
+
+/*----------------------------------------------------------------------------------------
+  Override bootstrap input text placeholder colour (it's too dark)
+----------------------------------------------------------------------------------------*/
+
+.form-control::-webkit-input-placeholder {
+  color: #bbb;
+}
+
+
 /*----------------------------------------------------------------------------------------
   Required for constraining an application to the height of the browser window
 ----------------------------------------------------------------------------------------*/
